# job-hunter-bot

./: .commit_message.txt  .env.example  .git-commit.txt  .gitignore  Dockerfile  LICENSE  README.md  check-git-status.bat  check-status.bat  commit-and-push.bat  commit-and-push.sh  commit.bat  dashboard.py  generate_pdf.py  job_hunter.py  master_cv.txt  master_cv_template.txt  pyproject.toml  requirements.txt  run_all.py  search_jobs.py  simple-git-check.bat  tailor_config.json  tailor_cv.py  validation.py
templates/: history.html  index.html  results.html  tailor.html
tests/: test_job_hunter.py
